# quant

./: .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  CODEBASE_SUMMARY.txt  Cargo.toml  NEXT_STEPS.md  PERFORMANCE.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PRE_COMMIT_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  START_HERE.md  STRATEGY.md  SUMMARY.md  pyproject.toml  requirements.txt
alphas/: __init__.py  base_alpha.py  enhanced_ema_cross_alpha.py  enhanced_macd_alpha.py
docs/: BEATING_GOLIATH.md  IMPROVEMENTS.md  PERFORMANCE_ANALYSIS.md  PHASE4_COMPLETE.md  QUICKSTART.md  THE_HUMAN_EDGE.md
examples/: backtest_demo.rs  basic_strategy_example.py  engine_single_cycle.rs  full_engine_demo.rs  full_trading_demo.rs  live_panic_detector.rs
python/: README.md  quant_engine.pyi
python/examples/: BACKTEST_README.md  backtest_example.py  backtest_with_alpha.py  behavioral_strategy.py  simple_strategy.py
src/: lib.rs  main.rs
src/alphas/: creative.rs  crowd_behavior.rs  mod.rs  narrative_shift.rs  panic_detector.rs  structural.rs
src/backtest/: engine.rs  metrics.rs  mod.rs  report.rs  trade.rs
src/core/: engine.rs  kelly_criterion.rs  mod.rs  order_manager.rs  performance.rs  position_sizer.rs  risk_manager.rs  signal_aggregator.rs
src/data/: cache.rs  mod.rs  yahoo.rs
src/human_layer/: mod.rs  python_bindings.rs
src/indicators/: mod.rs  simd.rs
src/network/: mod.rs
src/types/: market_data.rs  mod.rs  price.rs  signal.rs
