[package]
name = "quant_engine"
version = "0.1.0"
edition = "2021"
authors = ["Human Edge Team"]
description = "Ultra-low latency trading engine with human intuition layer"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Lock-free data structures
crossbeam = "0.8"
lockfree = "0.5"

# CPU pinning and affinity
core_affinity = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
socket2 = "0.5"

# Math and statistics
ndarray = "0.15"
statrs = "0.16"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging (async, lock-free)
tracing = "0.1"
tracing-subscriber = "0.3"

# Python bindings (optional feature)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# HTTP client for data fetching
reqwest = { version = "0.11", features = ["json"] }

# Async channels
flume = "0.11"

# Zero-copy parsing
nom = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# Metrics
metrics = "0.21"
yahoo_finance_api = "4.1.0"
time = "0.3.44"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.9.2"

[features]
default = []
python = ["pyo3"]

[build-dependencies]
cc = "1.0"  # For C++ SIMD integration

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "quant_engine"
path = "src/main.rs"

[lib]
name = "quant_engine"
path = "src/lib.rs"
crate-type = ["rlib"]  # cdylib only needed for Python, maturin handles it
