[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quant_engine"
version = "0.1.0"
description = "High-performance quant trading engine with human intuition layer"
readme = "python/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Human Edge Team" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "quant_engine"

# Build cdylib for Python
[lib]
crate-type = ["cdylib"]
